// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceDetailActions should render properly when creating new 1`] = `
<li
  primary={
    Array [
      <Xo
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </Xo>,
      <Xo
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </Xo>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing collaborative datasource 1`] = `
<li
  primary={
    Array [
      <Xo
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </Xo>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing owned datasource 1`] = `
<li
  primary={
    Array [
      <Xo
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </Xo>,
      <Xo
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </Xo>,
    ]
  }
  secondary={
    Array [
      <Xo
        color="danger"
        icon={<Delete />}
        onClick={[Function]}
        size="m"
    >
        Delete
    </Xo>,
    ]
  }
/>
`;
